--- a/ui-src/views/st-tunnel.html
+++ b/ui-src/views/st-tunnel.html
@@ -20,7 +20,7 @@
   <button class="ui-button ui-button--colored ui-button--block">Save</button>
 </form>
 
-<div class="ui-padding">
+<div class="ui-padding" class.hidden="[[parameters.id | not]]">
   <div>
     Status: <span>[[tunnel.status]]</span>
   </div>
